--- a/30072025/index.html
+++ b/30072025/index.html
@@ -34,7 +34,8 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/138224" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Jessica Simpson, Brendan James, Neal McCoy und Mireille Mathieu. Der Schauspieler Tom
+      Cruise hatte am 3. Juli Geburtstag. Außerdem war am 28. Juli der Nationalfeiertag von Peru.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
