--- a/27082025/index.html
+++ b/27082025/index.html
@@ -30,10 +30,13 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2>Sendung am 27.08.2025 um 18:00 Uhr</h2>
-    <p>Sie können diese Sendung am 27.08.2025 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-      href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/729630/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/138225" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
+    <p><a href="https://cba.fro.at/729630" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
     <p>Heute feiern wir mit Demi Lovato, James Morrison, Mika und Kacey Musgraves. Der polnische Fußballprofi Robert
       Lewandowski hatte am 21. August Geburtstag. Außerdem war am 6. August der Nationalfeiertag von Jamaika.</p>
   </div>
