--- a/24092025/index.html
+++ b/24092025/index.html
@@ -34,7 +34,8 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/138226" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Alex Warren, Esther Graf, James Bay und Tegan & Sara. Der Bergsteiger Reinhold Messner hatte
+      am 17. September Geburtstag. Außerdem war am 1. September der Tag der Wörter, auf die sich nichts reimt.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
