--- a/14012026/index.html
+++ b/14012026/index.html
@@ -19,7 +19,7 @@
   <meta name="msapplication-config" content="https://happybirthdayshowhelsinki.github.io/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Sendung am 02.07.2025 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+  <title>Sendung am 14.01.2026 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
   <link rel="stylesheet" href="/styles/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/stylesheet.css">
@@ -29,18 +29,12 @@
   <div class="content">
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
-    <h2>Sendung am 02.07.2025 um 18:00 Uhr</h2>
-    <div class="col-md-6">
-      <iframe src="https://cba.fro.at/565617/embed?&waveform=false" width="100%" height="99"
-        style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
-    </div>
-    <p><a href="https://helsinki.at/program/138223" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
-    </p>
-    <p><a href="https://cba.fro.at/565617" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
-    <p>Heute gibt es eine Wiederholung der Sendung vom 06.07.2022.</p>
-    <p>"Heute feiern wir mit Jennifer Lopez, DJ Lumix, Luke Hemmings von 5 Seconds Of Summer und Carolin Niemczyk von
-      Glasperlenspiel. Am 4. Juli war der Unabhängigkeitstag in den USA. Außerdem hat der englische Fußballspieler Harry
-      Kane am 28. Juli Geburtstag."</p>
+    <h2>Sendung am 14.01.2026 um 18:00 Uhr</h2>
+    <p>Sie können diese Sendung am 14.01.2026 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
+      href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <!-- <p><a href="https://helsinki.at/program/138229" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
+    </p> -->
+    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
