--- a/24092025/index.html
+++ b/24092025/index.html
@@ -30,10 +30,13 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2>Sendung am 24.09.2025 um 18:00 Uhr</h2>
-    <p>Sie können diese Sendung am 24.09.2025 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-      href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/734920/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/138226" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
+    <p><a href="https://cba.fro.at/734920" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
     <p>Heute feiern wir mit Alex Warren, Esther Graf, James Bay und Tegan & Sara. Der Bergsteiger Reinhold Messner hatte
       am 17. September Geburtstag. Außerdem war am 1. September der Tag der Wörter, auf die sich nichts reimt.</p>
   </div>
