--- a/22102025/index.html
+++ b/22102025/index.html
@@ -34,7 +34,9 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/138227" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Ivan Doroschuk von Men Without Hats, Sarah Engels, Lewis Capaldi und Gabriella Cilmi. Der
+      Skirennläufer Manuel Feller hatte am 13. Oktober Geburtstag. Außerdem war vorgestern am 20. Oktober der
+      Räum-Deinen-Desktop-Auf-Tag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
